--- a/src/Components/Login/login.module.css
+++ b/src/Components/Login/login.module.css
@@ -73,7 +73,7 @@
 .forms {
   height: 400px;
 }
-input {
+input,select {
 
     height:40px;
     margin-bottom: 10px;
@@ -84,4 +84,8 @@ button {
   height :40px;
   border-radius: 20px;
    background-color: rgb(255, 146, 91);
+}
+.error {
+  color:red;
+  font-size: 11px;
 }
