added employer form

--- a/src/Components/Employer/employerTable/employerTable.module.css
+++ b/src/Components/Employer/employerTable/employerTable.module.css
@@ -4,20 +4,28 @@ html {
 }
 
 table {
-  padding: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
   border: 1px solid gray;
+  table-layout: fixed;
+  width: 100%;
 }
 
 tbody {
   border-bottom: 1px solid lightgray;
+  padding:10px
 }
 
 th {
   border-bottom: 1px solid lightgray;
   border-right: 1px solid lightgray;
   padding: 2px 4px;
+  padding:10px
 }
-
+td {
+  justify-content: center;
+}
 tfoot {
   color: gray;
 }
