--- a/src/Components/Employer/index.module.css
+++ b/src/Components/Employer/index.module.css
@@ -1,3 +1,7 @@
 .wrapper {
-  
+  display: flex;
+  justify-content: center;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
